--- a/CapstoneCYO.Rmd
+++ b/CapstoneCYO.Rmd
@@ -3,17 +3,23 @@ title: "HarvardX Data Science Capstone Project"
 author: "Vincent"
 date: "May 2019"
 output:
-  pdf_document: default
   html_document: default
+  pdf_document: default
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+![Weather in Australia](australiaweather.jpg)
+
 # Introduction
 
-# Loading and cleaning data
+
+This project is based on the "Rain in Australia" datasaset available on kaggle: <https://www.kaggle.com/jsphyg/weather-dataset-rattle-package>
+The goal is to predict wether or not it will rain tomorrow by training a binary classification model.
+
+# Preparing data
 
 ## Downloading and loading data
 
@@ -58,12 +64,11 @@ rain$Date <- as.Date(rain$Date)
 summary(rain$Date)
 ```
 
-However extracting the month or the week could give a better predictor
+However extracting the month CAN give can be a better predictor because it will have the same value for the same season over the years.
 
 ```{r, message = FALSE}
 library(lubridate)
 rain$Month <- month(ymd(rain$Date))
-rain$Week <- week(ymd(rain$Date))
 ```
 
 
@@ -94,19 +99,15 @@ Since those variables are prefectly correlated, we will keep only one of them. R
 rain$RainToday <- NULL
 ```
 
-## Missing values
+### Missing values
 
-```{r}
-sapply(rain, function(x) sum(is.na(x)))
-```
-
-Some variables contain a high number of missing variables. 
+Some variables contain a high percentage of missing values. 
 
 ```{r}
 sapply(rain, function(x) round(sum(is.na(x)) / length(x) * 100))
 ```
 
-for some of them, the percentage of missing values is so high that trying to impute those values is useless, therefore we keep only those with up to 10% of missing values and eliminate the others: Evaporation, Sunshine, Cloud9am, Cloud3pm
+for some of them, this percentage is so high that trying to impute those values is useless, therefore we keep only those with up to 10% of missing values and eliminate the others: Evaporation, Sunshine, Cloud9am, Cloud3pm
 
 ```{r}
 rain$Evaporation <- NULL
@@ -135,14 +136,11 @@ For WindGustDir we impute the value of WindDir9am for the same observation
 For WindGustSpeed, we impute the maximum of WindSpeed9am and WindSpeed3pm for the same observation
 For Pressure9am and Pressure3pm we have no value in the same observation thta would make sense, so we impute the mean of these variables in the entire dataset.
 
-
-
 ```{r}
 rain$WindGustDir[is.na(rain$WindGustDir)] <- rain$WindDir9am[is.na(rain$WindGustDir)] 
 rain$WindGustSpeed[is.na(rain$WindGustSpeed)] <- max(rain$WindSpeed9am[is.na(rain$WindGustSpeed)], rain$WindSpeed3pm[is.na(rain$WindGustSpeed)]) 
 rain$Pressure9am[is.na(rain$Pressure9am)] <- mean(rain$Pressure9am[!is.na(rain$Pressure9am)]) 
 rain$Pressure3pm[is.na(rain$Pressure3pm)] <- mean(rain$Pressure3pm[!is.na(rain$Pressure3pm)]) 
-sapply(rain, function(x) sum(is.na(x)))
 ```
 
 At this stage, we no longer have missing values in the dataset, and we still have 142193 observations. If we had simply ignored all observations with missing values, we would only have 56420 left. This simple imputation allows us to consider almost three times more observations and thus keep more signal in the dataset, hopefully leading to more insight.
@@ -158,58 +156,46 @@ prop.table(table(rain$RainTomorrow))
 
 We have to take prevalence into account because in 77.5% of cases, the outcome is NO (no rain). So a dummy model always predicting no would be close to 77.5% accurate. We have also to consider sensitivity and specificity. Sensitivity is the ability to predict a positive outcome when the actual outcome is positive. Specificity is the ability not to predict a positive outcome when the actual outcome is not positive.
 
-## Corelation of explanatory variables
+## Correlation of explanatory variables
 
-The explanotory variables contains different measures of the same quantity. For example we have 4 measures of temperature: min, max, at 9am and at 6pm. As can be expected, the is a relatively strong correlation between these measures.
+The explanotory variables contains different measures of the same quantity. For example we have 4 measures of temperature: min, max, at 9am and at 6pm. As can be expected, there is a relatively strong correlation between these measures.
 
-```{r pairs_temp, message = FALSE}
+```{r Temperature Correlation, message = FALSE, warning= FALSE}
 library(dplyr)
+library(corrplot)
+corrplot(cor(select(rain, contains("Temp"))), method = "number")
 #pairs(select(rain, contains("Temp")))
 ```
+This is also true for the two measures of pressure.
 
 ```{r}
-#pairs(select(rain, contains("Pressure")))
+pairs(select(rain, contains("Pressure")))
 ```
 
-```{r}
-#pairs(select(rain, contains("Speed")))
-```
-
-```{r}
-#pairs(select(rain, contains("Humidity")))
-```
-
-```{r}
-#pairs(select(rain, c('WindSpeed9am', 'Pressure9am', 'Temp9am')))
-```
-```{r, message = FALSE}
-library(corrplot)
-#corrplot(cor(select(rain, c('WindSpeed9am', 'Pressure9am', 'Temp9am'))), method = 'number')
-```
-
+We can outline the highest correlations among the available predictors.
 
 ```{r}
 numeric <- sapply(rain, is.numeric)
 correlations <- cor(rain[,numeric])
 diag(correlations) <- 0
 high <- apply(abs(correlations) >= 0.7, 2, any)
-#corrplot(correlations[high, high], method = "number")
+corrplot(correlations[high, high], method = "number")
 ```
 
-Some predictors are highly correlated. For instance, the most obvious corelations are between Temp9am and MinTemp, Temp 3pm and MaxTemp. Pressure9am and Pressure3pm also seem to bring the same information whith a near perfect corelation of 0.96.
+Some predictors are indeed highly correlated. For instance, the most obvious corelations are between Temp9am and MinTemp, Temp 3pm and MaxTemp. Pressure9am and Pressure3pm also seem to bring the same information whith a near perfect corelation of 0.96.
 Later, in models that are sensitive to corelated predictors, we could choose to keep only MinTemp and MaxTemp and only one measure of Pressure. We would keep most of the signal with 3 predictors instead of 6. 
 
 ## Humidity
 
 ```{r, message=FALSE}
 library(ggplot2)
-#rain %>% 
-#  ggplot(aes(x=RainTomorrow, y=Humidity9am, colour = RainTomorrow, fill= RainTomorrow)) + geom_violin()
+rain %>% 
+  ggplot(aes(x=RainTomorrow, y=Humidity9am, colour = RainTomorrow, fill= RainTomorrow)) + geom_violin()
 ```
 
 ```{r, message=FALSE}
-#rain %>% 
-#  ggplot(aes(x=RainTomorrow, y=Humidity3pm, colour = RainTomorrow, fill= RainTomorrow)) + geom_violin()
+rain %>% 
+  ggplot(aes(x=RainTomorrow, y=Humidity3pm, colour = RainTomorrow, fill= RainTomorrow)) + geom_violin()
 ```
 
 We notice that, even if in both cases we are measuring Humidity, there difference is greater in the Humidity3pm measure. It could be interesting to keep only Humidity3pm and eliminate Humidity9am with has a substantial corelation of `round(cor(rain$Humidity9am, rain$Humidity3pm), digits = 2`.
@@ -268,20 +254,18 @@ F_meas(data = pred_naive, reference = test_set$RainTomorrow)
 #confusionMatrix(data = pred_naive, reference = test_set$RainTomorrow)$byClass['F1']
 ```
 
-### ROC Curve
-
 ## Logistic Regression
 
 ### Feature selection
 
-TODO : Method to select predictors, based on explanatory analysis above
+To build a logistic regression model, we use knowledge we gained during explanatory analysis and eliminate highly correlated predictors.
 
 ```{r}
 mod_glm <- glm(RainTomorrow ~ WindGustSpeed + WindSpeed9am + Humidity3pm + Pressure3pm + MinTemp + MaxTemp + Month + Location, data = train_set, family = binomial)
 #summary(mod_glm)
 ```
 
-We see that all of the selected predictors are highly significant.
+All of the selected predictors are highly significant.
 
 ```{r}
 pred_glm <- predict(mod_glm, type = 'response', newdata = test_set)
@@ -290,10 +274,10 @@ pred_glm3 <- as.factor(ifelse (pred_glm < 0.3, "No", "Yes"))
 confusionMatrix(data = pred_glm2, reference = test_set$RainTomorrow, positive = "Yes")
 ```
 ```{r}
-print(paste('Accuracy',round(mean(pred_glm2 == test_set$RainTomorrow), digits = 4)))
+#print(paste('Accuracy',round(mean(pred_glm2 == test_set$RainTomorrow), digits = 4)))
 ```
 
-```{r, message=FALSE}
+```{r, message=FALSE, warning=FALSE}
 library(ROCR)
 pr <- prediction(pred_glm, test_set$RainTomorrow)
 prf <- performance(pr, measure = "tpr", x.measure = "fpr")
@@ -311,15 +295,27 @@ auc
 
 ```{r}
 library(rpart)
-mod_tree <- rpart(RainTomorrow ~ ., data = train_set, method = 'class')
-plot(mod_tree)
-text(mod_tree)
+mod_tree <- rpart(RainTomorrow ~ WindGustSpeed + WindSpeed9am + Humidity3pm + Pressure3pm + MinTemp + MaxTemp + Month + Location, data = train_set, method = 'class')
+library(rpart.plot)
+prp(mod_tree, type = 2, extra = 4)
 ```
 
 ```{r}
-pred_tree <- predict(mod_tree, newdata = test_set)
-#pred_tree2 <- as.factor(pred_tree)
-#confusionMatrix(data = pred_tree2, reference = test_set$RainTomorrow, positive = "Yes")
+pred_tree <- predict(mod_tree, newdata = test_set, type = "class")
+confusionMatrix(pred_tree, test_set$RainTomorrow, positive = "Yes")
+```
+
+```{r, message=FALSE}
+pred_tree_prob <- predict(mod_tree, newdata = test_set)
+pr <- prediction(pred_tree_prob[,2], test_set$RainTomorrow)
+prf <- performance(pr, measure = "tpr", x.measure = "fpr")
+plot(prf)
+```
+
+```{r, message=FALSE}
+auc <- performance(pr, measure = "auc")
+auc <- auc@y.values[[1]]
+auc
 ```
 
 
